--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eslint-config-aizatto",
   "version": "0.0.1",
   "main": "index.js",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aizatto/nodejs.git"
